Update [Simulation and Parsing] : Update json file parsing, add list format to Simulation methods